Actualizar rutas de importación en múltiples archivos de proyectos para corregir la estructura de directorios.

--- a/src/pages/en/projects/air/domingo.astro
+++ b/src/pages/en/projects/air/domingo.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
 import domingo from '../../../img/projects/domingo.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import domingo1 from '../../../img/projects/domingo/domingo1.webp';
 import domingo2 from '../../../img/projects/domingo/domingo2.webp';
