--- a/src/pages/en/projects/air/gracias.astro
+++ b/src/pages/en/projects/air/gracias.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
 import gracias from '../../../img/projects/gracias.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import gracias1 from '../../../img/projects/gracias/gracias1.webp';
 import gracias2 from '../../../img/projects/gracias/gracias2.webp';
