--- a/src/pages/en/projects/air/luthiers.astro
+++ b/src/pages/en/projects/air/luthiers.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
 import luthiers from '../../../img/projects/luthiers.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import luthiers1 from '../../../img/projects/luthiers/luthiers1.webp';
 import luthiers2 from '../../../img/projects/luthiers/luthiers2.webp';
