--- a/src/pages/en/projects/air/orquesta.astro
+++ b/src/pages/en/projects/air/orquesta.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import orquesta from '../../../img/projects/orquesta.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import orquesta1 from '../../../img/projects/orquesta/orquesta1.webp';
 import orquesta2 from '../../../img/projects/orquesta/orquesta2.webp';
