--- a/src/pages/en/projects/buildings/ballet-santiago.astro
+++ b/src/pages/en/projects/buildings/ballet-santiago.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import ballet from '../../../img/projects/ballet.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import ballet1 from '../../../img/projects/ballet/ballet1.webp';
 import ballet2 from '../../../img/projects/ballet/ballet2.webp';
