--- a/src/pages/en/projects/buildings/superior-de-arte.astro
+++ b/src/pages/en/projects/buildings/superior-de-arte.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import superior from '../../../img/projects/superior.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import superior1 from '../../../img/projects/superior/superior1.webp';
 import superior2 from '../../../img/projects/superior/superior2.webp';
