--- a/src/pages/en/projects/buildings/teatro-municipal.astro
+++ b/src/pages/en/projects/buildings/teatro-municipal.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import municipal from '../../../img/projects/municipal.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import municipal1 from '../../../img/projects/municipal/municipal1.webp';
 import municipal2 from '../../../img/projects/municipal/municipal2.webp';
