--- a/src/pages/en/projects/centers/cultural-casas.astro
+++ b/src/pages/en/projects/centers/cultural-casas.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import cultural from '../../../img/projects/cultural.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import cultural1 from '../../../img/projects/cultural/cultural1.webp';
 import cultural2 from '../../../img/projects/cultural/cultural2.webp';
