--- a/src/pages/en/projects/centers/cultural-recoleta.astro
+++ b/src/pages/en/projects/centers/cultural-recoleta.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import recoleta from '../../../img/projects/recoleta.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import recoleta1 from '../../../img/projects/recoleta/recoleta1.webp';
 import recoleta2 from '../../../img/projects/recoleta/recoleta2.webp';
