--- a/src/pages/en/projects/centers/gabriela-mistral.astro
+++ b/src/pages/en/projects/centers/gabriela-mistral.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import mistral from '../../../img/projects/mistral.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import mistral1 from '../../../img/projects/mistral/mistral1.webp';
 import mistral2 from '../../../img/projects/mistral/mistral2.webp';
