--- a/src/pages/en/projects/sands/arena-santiago.astro
+++ b/src/pages/en/projects/sands/arena-santiago.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import arena from '../../../img/projects/arena.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import arena1 from '../../../img/projects/arena/arena1.webp';
 import arena2 from '../../../img/projects/arena/arena2.webp';
