--- a/src/pages/en/projects/scenography/boheme.astro
+++ b/src/pages/en/projects/scenography/boheme.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import boheme from '../../../img/projects/boheme.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import boheme1 from '../../../img/projects/boheme/boheme1.webp';
 import boheme2 from '../../../img/projects/boheme/boheme2.webp';
