--- a/src/pages/en/projects/scenography/boris.astro
+++ b/src/pages/en/projects/scenography/boris.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import boris from '../../../img/projects/boris.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import boris1 from '../../../img/projects/boris/boris1.webp';
 import boris2 from '../../../img/projects/boris/boris2.webp';
