--- a/src/pages/en/projects/scenography/egitto.astro
+++ b/src/pages/en/projects/scenography/egitto.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import egitto from '../../../img/projects/egitto.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import egitto1 from '../../../img/projects/egitto/egitto1.webp';
 import egitto2 from '../../../img/projects/egitto/egitto2.webp';
