--- a/src/pages/en/projects/scenography/ernani.astro
+++ b/src/pages/en/projects/scenography/ernani.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import ernani from '../../../img/projects/ernani.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import ernani1 from '../../../img/projects/ernani/ernani1.webp';
 import ernani2 from '../../../img/projects/ernani/ernani2.webp';
