--- a/src/pages/en/projects/scenography/giovanni.astro
+++ b/src/pages/en/projects/scenography/giovanni.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import giovanni from '../../../img/projects/giovanni.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import giovanni1 from '../../../img/projects/giovanni/giovanni1.webp';
 import giovanni2 from '../../../img/projects/giovanni/giovanni2.webp';
