--- a/src/pages/en/projects/scenography/hoffmann.astro
+++ b/src/pages/en/projects/scenography/hoffmann.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import hoffmann from '../../../img/projects/hoffmann.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import hoffmann1 from '../../../img/projects/hoffmann/hoffmann1.webp';
 import hoffmann2 from '../../../img/projects/hoffmann/hoffmann2.webp';
