--- a/src/pages/en/projects/scenography/lammermoor.astro
+++ b/src/pages/en/projects/scenography/lammermoor.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import lammermoor from '../../../img/projects/lammermoor.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import lammermoor1 from '../../../img/projects/lammermoor/lammermoor1.webp';
 import lammermoor2 from '../../../img/projects/lammermoor/lammermoor2.webp';
