--- a/src/pages/en/projects/scenography/maschera.astro
+++ b/src/pages/en/projects/scenography/maschera.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import maschera from '../../../img/projects/maschera.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import maschera1 from '../../../img/projects/maschera/maschera1.webp';
 import maschera2 from '../../../img/projects/maschera/maschera2.webp';
