--- a/src/pages/en/projects/scenography/nabucco.astro
+++ b/src/pages/en/projects/scenography/nabucco.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import nabucco from '../../../img/projects/nabucco.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import nabucco1 from '../../../img/projects/nabucco/nabucco1.webp';
 import nabucco2 from '../../../img/projects/nabucco/nabucco2.webp';
