--- a/src/pages/en/projects/scenography/ottello.astro
+++ b/src/pages/en/projects/scenography/ottello.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import ottello from '../../../img/projects/ottello.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import ottello1 from '../../../img/projects/ottello/ottello1.webp';
 import ottello2 from '../../../img/projects/ottello/ottello2.webp';
