--- a/src/pages/en/projects/scenography/pagliacci.astro
+++ b/src/pages/en/projects/scenography/pagliacci.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import pagliacci from '../../../img/projects/pagliacci.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import pagliacci1 from '../../../img/projects/pagliacci/pagliacci1.webp';
 import pagliacci2 from '../../../img/projects/pagliacci/pagliacci2.webp';
