--- a/src/pages/en/projects/scenography/soldaten.astro
+++ b/src/pages/en/projects/scenography/soldaten.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import soldaten from '../../../img/projects/soldaten.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import soldaten1 from '../../../img/projects/soldaten/soldaten1.webp';
 import soldaten2 from '../../../img/projects/soldaten/soldaten2.webp';
