--- a/src/pages/en/projects/scenography/traviata.astro
+++ b/src/pages/en/projects/scenography/traviata.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import traviata from '../../../img/projects/traviata.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import traviata1 from '../../../img/projects/traviata/traviata1.webp';
 import traviata2 from '../../../img/projects/traviata/traviata2.webp';
