--- a/src/pages/en/projects/scenography/trovatore.astro
+++ b/src/pages/en/projects/scenography/trovatore.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import trovatore from '../../../img/projects/trovatore.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import trovatore1 from '../../../img/projects/trovatore/trovatore1.webp';
 import trovatore2 from '../../../img/projects/trovatore/trovatore2.webp';
