--- a/src/pages/en/projects/scenography/turandot.astro
+++ b/src/pages/en/projects/scenography/turandot.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import turandot from '../../../img/projects/turandot.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import turandot1 from '../../../img/projects/turandot/turandot1.webp';
 import turandot2 from '../../../img/projects/turandot/turandot2.webp';
