--- a/src/pages/en/projects/scenography/vespri.astro
+++ b/src/pages/en/projects/scenography/vespri.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import vespri from '../../../img/projects/vespri.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import vespri1 from '../../../img/projects/vespri/vespri1.webp';
 import vespri2 from '../../../img/projects/vespri/vespri2.webp';
