--- a/src/pages/en/projects/theaters/eastman-theater.astro
+++ b/src/pages/en/projects/theaters/eastman-theater.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import eastman from '../../../img/projects/eastman.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import eastman1 from '../../../img/projects/eastman/eastman1.webp';
 import eastman2 from '../../../img/projects/eastman/eastman2.webp';
