--- a/src/pages/en/projects/theaters/kimmel-center.astro
+++ b/src/pages/en/projects/theaters/kimmel-center.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import kimmel from '../../../img/projects/kimmel.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import kimmel1 from '../../../img/projects/kimmel/kimmel1.webp';
 import kimmel2 from '../../../img/projects/kimmel/kimmel2.webp';
