--- a/src/pages/en/projects/theaters/teatro-argentino.astro
+++ b/src/pages/en/projects/theaters/teatro-argentino.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import argentino from '../../../img/projects/argentino.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import argentino1 from '../../../img/projects/argentino/argentino1.webp';
 import argentino2 from '../../../img/projects/argentino/argentino2.webp';
