--- a/src/pages/en/projects/theaters/teatro-bellas-artes.astro
+++ b/src/pages/en/projects/theaters/teatro-bellas-artes.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import artes from '../../../img/projects/artes.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import artes1 from '../../../img/projects/artes/artes1.webp';
 import artes2 from '../../../img/projects/artes/artes2.webp';
