--- a/src/pages/en/projects/theaters/teatro-coliseo.astro
+++ b/src/pages/en/projects/theaters/teatro-coliseo.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import coliseo from '../../../img/projects/coliseo.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import coliseo1 from '../../../img/projects/coliseo/coliseo1.webp';
 import coliseo2 from '../../../img/projects/coliseo/coliseo2.webp';
