--- a/src/pages/en/projects/theaters/teatro-colon.astro
+++ b/src/pages/en/projects/theaters/teatro-colon.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import colon from '../../../img/projects/colon.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import colon1 from '../../../img/projects/colon/colon1.webp';
 import colon2 from '../../../img/projects/colon/colon2.webp';
