--- a/src/pages/en/projects/theaters/teatro-condes.astro
+++ b/src/pages/en/projects/theaters/teatro-condes.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import condes from '../../../img/projects/condes.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import condes1 from '../../../img/projects/condes/condes1.webp';
 import condes2 from '../../../img/projects/condes/condes2.webp';
