--- a/src/pages/en/projects/theaters/teatro-del-lago.astro
+++ b/src/pages/en/projects/theaters/teatro-del-lago.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import lago from '../../../img/projects/lago.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import lago1 from '../../../img/projects/lago/lago1.webp';
 import lago2 from '../../../img/projects/lago/lago2.webp';
