--- a/src/pages/en/projects/theaters/teatro-del-libertador.astro
+++ b/src/pages/en/projects/theaters/teatro-del-libertador.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import libertador from '../../../img/projects/libertador.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import libertador1 from '../../../img/projects/libertador/libertador1.webp';
 import libertador2 from '../../../img/projects/libertador/libertador2.webp';
