--- a/src/pages/en/projects/theaters/teatro-la-dehesa.astro
+++ b/src/pages/en/projects/theaters/teatro-la-dehesa.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import dehesa from '../../../img/projects/dehesa.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import dehesa1 from '../../../img/projects/dehesa/dehesa1.webp';
 import dehesa2 from '../../../img/projects/dehesa/dehesa2.webp';
