--- a/src/pages/en/projects/theaters/teatro-la-serena.astro
+++ b/src/pages/en/projects/theaters/teatro-la-serena.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import serena from '../../../img/projects/serena.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import serena1 from '../../../img/projects/serena/serena1.webp';
 import serena2 from '../../../img/projects/serena/serena2.webp';
