--- a/src/pages/en/projects/theaters/teatro-martin-fierro.astro
+++ b/src/pages/en/projects/theaters/teatro-martin-fierro.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import fierro from '../../../img/projects/fierro.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import fierro1 from '../../../img/projects/fierro/fierro1.webp';
 import fierro2 from '../../../img/projects/fierro/fierro2.webp';
@@ -66,42 +66,42 @@ const images = [
         width: 835,
         height: 660,
     },
-      {
-         largeURL: fierro5.src,
-         thumbnailURL: fierro5.src,
-         width: 838,
-         height: 660,
-      },
-      {
-         largeURL: fierro6.src,
-         thumbnailURL: fierro6.src,
-         width: 858,
-         height: 660,
-      },
-      {
-         largeURL: fierro7.src,
-         thumbnailURL: fierro7.src,
-         width: 1003,
-         height: 660,
-      },
-      {
-         largeURL: fierro8.src,
-         thumbnailURL: fierro8.src,
-         width: 1065,
-         height: 744,
-      },
-      {
-         largeURL: fierro9.src,
-         thumbnailURL: fierro9.src,
-         width: 826,
-         height: 660,
-      },
-      {
-         largeURL: fierro10.src,
-         thumbnailURL: fierro10.src,
-         width: 1190,
-         height: 744,
-      },
+    {
+        largeURL: fierro5.src,
+        thumbnailURL: fierro5.src,
+        width: 838,
+        height: 660,
+    },
+    {
+        largeURL: fierro6.src,
+        thumbnailURL: fierro6.src,
+        width: 858,
+        height: 660,
+    },
+    {
+        largeURL: fierro7.src,
+        thumbnailURL: fierro7.src,
+        width: 1003,
+        height: 660,
+    },
+    {
+        largeURL: fierro8.src,
+        thumbnailURL: fierro8.src,
+        width: 1065,
+        height: 744,
+    },
+    {
+        largeURL: fierro9.src,
+        thumbnailURL: fierro9.src,
+        width: 826,
+        height: 660,
+    },
+    {
+        largeURL: fierro10.src,
+        thumbnailURL: fierro10.src,
+        width: 1190,
+        height: 744,
+    },
 ];
 ---
 
