--- a/src/pages/en/projects/theaters/teatro-pane.astro
+++ b/src/pages/en/projects/theaters/teatro-pane.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import pane from '../../../img/projects/pane.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import pane1 from '../../../img/projects/pane/pane1.webp';
 import pane2 from '../../../img/projects/pane/pane2.webp';
