--- a/src/pages/en/projects/theaters/teatro-santiago.astro
+++ b/src/pages/en/projects/theaters/teatro-santiago.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import santiago from '../../../img/projects/santiago.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import santiago1 from '../../../img/projects/santiago/santiago1.webp';
 import santiago2 from '../../../img/projects/santiago/santiago2.webp';
