--- a/src/pages/en/projects/theaters/teatro-solis.astro
+++ b/src/pages/en/projects/theaters/teatro-solis.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import solis from '../../../img/projects/solis.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import solis1 from '../../../img/projects/solis/solis1.webp';
 import solis2 from '../../../img/projects/solis/solis2.webp';
