--- a/src/pages/en/projects/theaters/teatro-tronador.astro
+++ b/src/pages/en/projects/theaters/teatro-tronador.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import tronador from '../../../img/projects/tronador.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import tronador1 from '../../../img/projects/tronador/tronador1.webp';
 import tronador2 from '../../../img/projects/tronador/tronador2.webp';
@@ -77,108 +77,108 @@ const images = [
         width: 933,
         height: 660,
     },
-      {
-         largeURL: tronador5.src,
-         thumbnailURL: tronador5.src,
-         width: 832,
-         height: 660,
-      },
-      {
-         largeURL: tronador6.src,
-         thumbnailURL: tronador6.src,
-         width: 828,
-         height: 660,
-      },
-      {
-         largeURL: tronador7.src,
-         thumbnailURL: tronador7.src,
-         width: 844,
-         height: 660,
-      },
-      {
-         largeURL: tronador8.src,
-         thumbnailURL: tronador8.src,
-         width: 894,
-         height: 660,
-      },
-      {
-         largeURL: tronador9.src,
-         thumbnailURL: tronador9.src,
-         width: 834,
-         height: 660,
-      },
-      {
-         largeURL: tronador10.src,
-         thumbnailURL: tronador10.src,
-         width: 778,
-         height: 660,
-      },
-      {
-         largeURL: tronador11.src,
-         thumbnailURL: tronador11.src,
-         width: 1028,
-         height: 744,
-      },
-      {
-         largeURL: tronador12.src,
-         thumbnailURL: tronador12.src,
-         width: 1013,
-         height: 660,
-      },
-      {
-         largeURL: tronador13.src,
-         thumbnailURL: tronador13.src,
-         width: 879,
-         height: 660,
-      },
-      {
-         largeURL: tronador14.src,
-         thumbnailURL: tronador14.src,
-         width: 847,
-         height: 660,
-      },
-      {
-         largeURL: tronador15.src,
-         thumbnailURL: tronador15.src,
-         width: 1011,
-         height: 660,
-      },
-      {
-         largeURL: tronador16.src,
-         thumbnailURL: tronador16.src,
-         width: 991,
-         height: 660,
-      },
-      {
-         largeURL: tronador17.src,
-         thumbnailURL: tronador17.src,
-         width: 848,
-         height: 660,
-      },
-      {
-         largeURL: tronador18.src,
-         thumbnailURL: tronador18.src,
-         width: 632,
-         height: 660,
-      },
-      {
-         largeURL: tronador19.src,
-         thumbnailURL: tronador19.src,
-         width: 854,
-         height: 660,
-      },
-      {
-         largeURL: tronador20.src,
-         thumbnailURL: tronador20.src,
-         width: 852,
-         height: 660,
-      },
-      {
-         largeURL: tronador21.src,
-         thumbnailURL: tronador21.src,
-         width: 845,
-         height: 660,
-      },
+    {
+        largeURL: tronador5.src,
+        thumbnailURL: tronador5.src,
+        width: 832,
+        height: 660,
+    },
+    {
+        largeURL: tronador6.src,
+        thumbnailURL: tronador6.src,
+        width: 828,
+        height: 660,
+    },
+    {
+        largeURL: tronador7.src,
+        thumbnailURL: tronador7.src,
+        width: 844,
+        height: 660,
+    },
+    {
+        largeURL: tronador8.src,
+        thumbnailURL: tronador8.src,
+        width: 894,
+        height: 660,
+    },
+    {
+        largeURL: tronador9.src,
+        thumbnailURL: tronador9.src,
+        width: 834,
+        height: 660,
+    },
+    {
+        largeURL: tronador10.src,
+        thumbnailURL: tronador10.src,
+        width: 778,
+        height: 660,
+    },
+    {
+        largeURL: tronador11.src,
+        thumbnailURL: tronador11.src,
+        width: 1028,
+        height: 744,
+    },
+    {
+        largeURL: tronador12.src,
+        thumbnailURL: tronador12.src,
+        width: 1013,
+        height: 660,
+    },
+    {
+        largeURL: tronador13.src,
+        thumbnailURL: tronador13.src,
+        width: 879,
+        height: 660,
+    },
+    {
+        largeURL: tronador14.src,
+        thumbnailURL: tronador14.src,
+        width: 847,
+        height: 660,
+    },
+    {
+        largeURL: tronador15.src,
+        thumbnailURL: tronador15.src,
+        width: 1011,
+        height: 660,
+    },
+    {
+        largeURL: tronador16.src,
+        thumbnailURL: tronador16.src,
+        width: 991,
+        height: 660,
+    },
+    {
+        largeURL: tronador17.src,
+        thumbnailURL: tronador17.src,
+        width: 848,
+        height: 660,
+    },
+    {
+        largeURL: tronador18.src,
+        thumbnailURL: tronador18.src,
+        width: 632,
+        height: 660,
+    },
+    {
+        largeURL: tronador19.src,
+        thumbnailURL: tronador19.src,
+        width: 854,
+        height: 660,
+    },
+    {
+        largeURL: tronador20.src,
+        thumbnailURL: tronador20.src,
+        width: 852,
+        height: 660,
+    },
+    {
+        largeURL: tronador21.src,
+        thumbnailURL: tronador21.src,
+        width: 845,
+        height: 660,
+    },
 ];
 ---
 
