--- a/src/pages/en/projects/scenography/barbero.astro
+++ b/src/pages/en/projects/scenography/barbero.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import barbero from '../../../img/projects/barbero.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import barbero1 from '../../../img/projects/barbero/barbero1.webp';
 import barbero2 from '../../../img/projects/barbero/barbero2.webp';
