--- a/src/pages/en/projects/theaters/ciudad-de-las-artes.astro
+++ b/src/pages/en/projects/theaters/ciudad-de-las-artes.astro
@@ -1,8 +1,8 @@
 ---
-import ProjectPage from '../../../components/ProjectPage.astro';
 import ciudad from '../../../img/projects/ciudad.webp';
-import Base from '../../../layouts/Base.astro';
-import Layout from '../../../layouts/Layout.astro';
+import ProjectPage from '../../../../components/ProjectPage.astro';
+import Base from '../../../../layouts/Base.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 import ciudad1 from '../../../img/projects/ciudad/ciudad1.webp';
 import ciudad2 from '../../../img/projects/ciudad/ciudad2.webp';
